# eval-ds

./: main.py  notebook.ipynb  pyproject.toml
data/: data.csv  data.parquet
