[tool.poetry]
name = "eval-ds"
version = "0.0.1"
description = ""
authors = ["Gabriel Morales Carreno <gmoralesc1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
scikit-learn = "^1.7.0"
pyarrow = "^20.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
